<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/soccerportrait2"
    >

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/team_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/team_title"
            android:text="@string/team_a"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/TeamName"
                       />

        <TextView
            android:id="@+id/team_a_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:layout_marginBottom="36dp"
            android:text="@string/goal_team_a"
            android:textSize="60sp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/team_a_corner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/holo_green_dark"
            android:padding="4dp"
            android:text="@string/corners_team_a"
            android:textSize="16sp"
            android:textColor="@color/yellowLight"/>


        <TextView
            android:id="@+id/team_a_penalty_kick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/holo_green_dark"
            android:padding="4dp"
            android:text="@string/penalty_kick_team_a"
            android:textSize="16sp"
            android:textColor="@color/yellowLight"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="46dp"
            android:text="@string/goal_button"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/yellowLight"
            android:onClick="addGoalForTeamA"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="46dp"
            android:text="@string/corner_button"
            android:onClick="addCornerForTeamA"
            android:background="@color/yellowLight"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="46dp"
            android:text="@string/penalty_kick_button"
            android:onClick="addPenaltyKickForTeamA"
            android:background="@color/yellowLight"/>


    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/team_title"
            android:text="@string/team_b"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/TeamName"/>

        <TextView
            android:id="@+id/team_b_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:layout_marginBottom="36dp"
            android:text="@string/goal_team_b"
            android:textSize="60sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/team_b_corner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/holo_green_dark"
            android:padding="4dp"
            android:text="@string/corners_team_b"
            android:textSize="16sp"
            android:textColor="@color/yellowLight"/>


        <TextView
            android:id="@+id/team_b_penalty_kick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/holo_green_dark"
            android:padding="4dp"
            android:text="@string/penalty_kick_team_b"
            android:textSize="16sp"
            android:textColor="@color/yellowLight"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="46dp"
            android:text="@string/goal_button"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/yellowLight"
            android:onClick="addGoalForTeamB"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="46dp"
            android:text="@string/corner_button"
            android:background="@color/yellowLight"
            android:onClick="addCornerForTeamB"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="46dp"
            android:text="@string/penalty_kick_button"
            android:background="@color/yellowLight"
            android:onClick="addPenaltyKickForTeamB"/>


    </LinearLayout>


</LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp"
            android:text="@string/reset"
            android:background="@android:color/holo_green_dark"
            android:textColor="@android:color/background_light"
            android:onClick="resetScore"
    />

</RelativeLayout>
